# file_encrypton_tool

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
src/: main.cpp
